--- a/.github/workflows/build_test_gradle.yml
+++ b/.github/workflows/build_test_gradle.yml
@@ -31,5 +31,7 @@ jobs:
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+      - name: stop gradle tasks
+        run: ./gradlew stop
       - name: Execute Gradle build
         run: ./gradlew build
