--- a/.github/workflows/build_test_forge.yml
+++ b/.github/workflows/build_test_forge.yml
@@ -34,4 +34,4 @@ jobs:
       - name: stop gradle tasks
         run: ./gradlew stop
       - name: Execute Gradle build
-        run: ./gradlew build
+        run: ./gradlew forgero-forge:build
