--- a/.github/workflows/build_test_fabric.yml
+++ b/.github/workflows/build_test_fabric.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: stop gradle tasks
-        run: ./gradlew stop
+        run: gradle stop
       - name: Execute Gradle build
         run: ./gradlew forgero-fabric:build
