--- a/.github/workflows/build_test_core.yml
+++ b/.github/workflows/build_test_core.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: stop gradle tasks
-        run: gradle stop
+        run: gradle --stop
       - name: Execute Gradle build
         run: ./gradlew forgero-core:build
