--- a/.github/workflows/build_test_forge.yml
+++ b/.github/workflows/build_test_forge.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Build & Unit Forge module
+name: Build & Unit test Forge module
 
 on:
   push:
@@ -32,6 +32,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: stop gradle tasks
-        run: gradle stop
+        run: gradle --stop
       - name: Execute Gradle build
         run: ./gradlew forgero-forge:build
