--- a/.github/workflows/build_test_forge.yml
+++ b/.github/workflows/build_test_forge.yml
@@ -32,9 +32,13 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: stop gradle tasks
+        uses: gradle/gradle-build-action@v2
         run: ./gradlew --stop
       - name: Set up project configuration
+        uses: gradle/gradle-build-action@v2
         run: ./gradlew --continue
+        continue-on-error: true
       - name: Execute Gradle build
+        uses: gradle/gradle-build-action@v2
         if: ${{ always() }}
         run: ./gradlew forgero-core:build
