--- a/.github/workflows/build_test_core.yml
+++ b/.github/workflows/build_test_core.yml
@@ -31,3 +31,5 @@ jobs:
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Execute Gradle build
         uses: gradle/gradle-build-action@v2
+        gradle-version: wrapper
+        arguments: build
