--- a/.github/workflows/build_test_fabric.yml
+++ b/.github/workflows/build_test_fabric.yml
@@ -33,4 +33,10 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: wrapper
+          arguments: build --continue
+      - name: Execute Gradle build
+        uses: gradle/gradle-build-action@v2
+        if: ${{ failure() || success() }}
+        with:
+          gradle-version: wrapper
           arguments: build
