--- a/forgero-forge/build.gradle
+++ b/forgero-forge/build.gradle
@@ -86,6 +86,10 @@ tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
+remapJar {
+
+}
+
 java {
     // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
     // if it is present.
