--- a/.github/workflows/build_test_core.yml
+++ b/.github/workflows/build_test_core.yml
@@ -33,4 +33,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: wrapper
-          arguments: build --continue
+          arguments: build --continue --stacktrace
