--- a/forgero-forge/build.gradle
+++ b/forgero-forge/build.gradle
@@ -51,7 +51,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     implementation forgeDependencies(project(':forgero-core'))
-    implementation project(':forgero-vanilla')
+    implementation forgeDependencies(project(':forgero-vanilla'))
 
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'org.jetbrains:annotations:23.0.0'
