--- a/forgero-forge/build.gradle
+++ b/forgero-forge/build.gradle
@@ -50,7 +50,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    implementation forgeDependencies(project(':forgero-core'))
+    implementation project(':forgero-core')
     implementation forgeDependencies(project(':forgero-vanilla'))
 
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
