--- a/forgero-forge/build.gradle
+++ b/forgero-forge/build.gradle
@@ -50,10 +50,8 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-
-
-    implementation forgeDependencies(project(':forgero-core'))
-    implementation forgeDependencies(project(':forgero-vanilla'))
+    runtimeOnly forgeDependencies(project(':forgero-core'))
+    runtimeOnly forgeDependencies(project(':forgero-vanilla'))
 
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'org.jetbrains:annotations:23.0.0'
@@ -68,8 +66,8 @@ dependencies {
     include project(':forgero-core')
     include project(':forgero-vanilla')
 
-    implementation project(':forgero-core')
-    implementation project(':forgero-vanilla')
+    api project(':forgero-core')
+    api project(':forgero-vanilla')
 }
 
 processResources {
