--- a/forgero-forge/build.gradle
+++ b/forgero-forge/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     runtimeOnly forgeRuntimeLibrary(project(':forgero-vanilla'))
     runtimeOnly forgeRuntimeLibrary(project(':forgero-core'))
-    modImplementation forgeDependencies(project(':minecraft-common'))
+    //modImplementation forgeDependencies(project(':minecraft-common'))
 }
 
 processResources {
