--- a/forgero-extended/src/main/resources/data/forgero/packs/shovel-additions/package.json
+++ b/forgero-extended/src/main/resources/data/forgero/packs/shovel-additions/package.json
@@ -7,7 +7,6 @@
     "minecraft",
     "forgero",
     "forgero-vanilla",
-    "minecraft-vanilla",
-    "forgero-extended"
+    "minecraft-vanilla"
   ]
 }
