--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -20,11 +20,11 @@ artifacts {
 
 dependencies {
     implementation project(':forgero-core')
-    implementation project(path: ':forgero-vanilla', configuration: 'dev')
-    implementation project(path: ':minecraft-common', configuration: 'dev')
+    implementation project(':forgero-vanilla')
     implementation project(':forgero-extended')
     //implementation project(':forgero-structures')
     implementation project(':forgero-compat')
+    implementation project(path: ':minecraft-common', configuration: 'dev')
 
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
@@ -52,7 +52,7 @@ task assembleComplete(type: Jar) {
             defaultRefmapName = "forgero-fabric-refmap.json"
         }
     }
-    
+
     remapJar {
         if (gradle.startParameter.taskNames.stream().anyMatch("assembleComplete"::equals)) {
             dependencies {
