--- a/forgero-fabric-compat/gradle.properties
+++ b/forgero-fabric-compat/gradle.properties
@@ -19,6 +19,7 @@ alloyforgery_version=2.0.16+1.19
 # https://www.curseforge.com/minecraft/mc-mods/roughly-enough-items/files/
 # https://maven.shedaniel.me/me/shedaniel/RoughlyEnoughItems-fabric/
 rei_version=9.1.577
+rer_version=2.5.2
 architectury_version=6.1.39
 # OwO
 # https://maven.wispforest.io/io/wispforest/owo-lib/
