--- a/minecraft-common/gradle.properties
+++ b/minecraft-common/gradle.properties
@@ -1,9 +1,10 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
-loader_version=0.14.10
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.4
+loader_version=0.14.12
+# Dependencies
 # Dependencies
 modid=forgero-common
 maven_group=com.sigmundgranaas
