--- a/.github/workflows/build_test_forge.yml
+++ b/.github/workflows/build_test_forge.yml
@@ -14,7 +14,7 @@ on:
     branches: [ 1.* ]
 
 jobs:
-  build_test_fabric:
+  build_test_forge:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
