--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
+    modCompileOnly "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
 
     modImplementation("net.devtech:arrp:0.6.2")
 
