--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ mod_version=0.10.5-BETA-1.19.2
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Dependencies
-org.gradle.parallel=true
+#org.gradle.parallel=true
 
