--- a/forgero-forge/build.gradle
+++ b/forgero-forge/build.gradle
@@ -5,9 +5,6 @@ plugins {
     id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
-version = rootProject.mod_version
-group = rootProject.maven_group
-
 loom {
     // use this if you are using the official mojang mappings
     // and want loom to stop warning you about their license
@@ -102,7 +99,7 @@ jar {
                 "Specification-Vendor"    : project.mod_author,
                 "Specification-Version"   : "1",
                 "Implementation-Title"    : project.name,
-                "Implementation-Version"  : version,
+                "Implementation-Version"  : project.version,
                 "Implementation-Vendor"   : project.mod_author,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
