--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -8,6 +8,12 @@ plugins {
 version = rootProject.mod_version
 group = rootProject.maven_group
 
+repositories {
+    maven {
+        url "https://maven.terraformersmc.com/releases/"
+    }
+}
+
 dependencies {
     implementation project(':forgero-core')
     implementation project(':forgero-vanilla')
@@ -96,6 +102,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
+
+    // Mod Menu API
+    modApi "com.terraformersmc:modmenu:${this.modmenu_version}"
 }
 
 
