Creating builders for composites

--- a/forgero-fabric-compat/gradle.properties
+++ b/forgero-fabric-compat/gradle.properties
@@ -35,3 +35,4 @@ mmdecorations_version=0.5.0
 # Additional Entity Attributes
 # https://github.com/DaFuqs/AdditionalEntityAttributes
 aea_versionite=1.19-SNAPSHOT
+emi_version=0.6.1+1.19.2
