--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,17 @@ archives_base_name = project.archives_base_name
 
 subprojects {
     repositories {
+        exclusiveContent {
+            forRepository {
+                maven {
+                    name = "Modrinth"
+                    url = "https://api.modrinth.com/maven"
+                }
+            }
+            filter {
+                includeGroup "maven.modrinth"
+            }
+        }
         maven {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
@@ -19,6 +30,7 @@ subprojects {
                 includeGroup "curse.maven"
             }
         }
+
         repositories {
             maven { url 'https://maven.blamejared.com' }
         }
