--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -33,8 +33,13 @@ dependencies {
 
     //dynamiclights compat
     modImplementation "curse.maven:modmenu-308702:4145207"
-    modCompileOnly "curse.maven:lambdynamiclights-393442:3824820"
+    modImplementation "curse.maven:lambdynamiclights-393442:3824820"
     modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+
+    //emi
+    //modCompileOnly "dev.emi:emi:${emi_version}:api"
+    //modLocalRuntime "dev.emi:emi:${emi_version}"
+    //modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
     //toolstats testing
     //modImplementation "curse.maven:tool-stats-377109:3944167"
