--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -27,13 +27,13 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
+    modCompileOnly "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
     modImplementation("net.devtech:arrp:0.6.7")
 
     //dynamiclights compat
-    modImplementation "curse.maven:modmenu-308702:4145207"
-    modImplementation "curse.maven:lambdynamiclights-393442:3824820"
-    modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+    modCompileOnly "curse.maven:modmenu-308702:4145207"
+    modCompileOnly "curse.maven:lambdynamiclights-393442:3824820"
+    modCompileOnly("dev.lambdaurora:spruceui:4.1.0+1.19.3")
 
     //emi
     //modCompileOnly "dev.emi:emi:${emi_version}:api"
