feat(wip): Add `BooleanWidget` implementation
WIP. Only works if you press in specific parts for some reason. Maybe just add a lib to handle this, at this point.

--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -172,6 +172,29 @@ loom {
 
             client()
         }
+        clientExtendedCompatOptimised {
+            name "Client Extended Compat Optimised"
+
+            repositories {
+                exclusiveContent {
+                    forRepository {
+                        maven {
+                            name = "Modrinth"
+                            url = "https://api.modrinth.com/maven"
+                        }
+                    }
+                    filter {
+                        includeGroup "maven.modrinth"
+                    }
+                }
+            }
+
+            dependencies {
+                modRuntimeOnly("maven.modrinth:lazydfu:4SHylIO9")
+            }
+
+            client()
+        }
     }
 }
 
