--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,13 @@ subprojects {
             name 'Gegy'
             url 'https://maven.gegy.dev'
         }
+        maven {
+            name = "Modrinth"
+            url = "https://api.modrinth.com/maven"
+            content {
+                includeGroup "maven.modrinth"
+            }
+        }
     }
 }
 
