Added the new Forgero creatures module

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ subprojects {
                 includeGroup "maven.modrinth"
             }
         }
+        maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
     }
 }
 
