--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,4 @@ pluginManagement {
 }
 
 rootProject.name = 'forgero'
-include 'forgero-fabric', 'forgero-extended', 'forgero-vanilla', 'forgero-core', 'forgero-fabric-compat', 'forgero-compat', 'forgero-structures', 'minecraft-common', 'forgero-forge'
+include 'forgero-fabric', 'forgero-extended', 'forgero-vanilla', 'forgero-core', 'forgero-fabric-compat', 'forgero-compat', 'forgero-structures', 'minecraft-common', 'forgero-forge', 'forgero-creatures'
