--- a/forgero-creatures/build.gradle
+++ b/forgero-creatures/build.gradle
@@ -24,8 +24,7 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modApi "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modCompileOnly 'software.bernie.geckolib:geckolib-fabric-1.19:3.1.38'
-
+    modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19:3.1.38'
 }
 
 
