Added support for better combat

--- a/forgero-fabric-compat/gradle.properties
+++ b/forgero-fabric-compat/gradle.properties
@@ -36,3 +36,4 @@ mmdecorations_version=0.5.0
 # https://github.com/DaFuqs/AdditionalEntityAttributes
 aea_versionite=1.19-SNAPSHOT
 emi_version=0.6.1+1.19.2
+player_anim_version=0.3.5
