--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ subprojects {
                 includeGroup "maven.modrinth"
             }
         }
+        maven { url 'https://maven.kosmx.dev/' }
     }
 }
 
