Updated FileService to use a classloader to properly load files from outside forgero's jar Updated the GEM_FUNCTION type to be registered by modinit

--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation("net.devtech:arrp:0.6.2")
 
-
+    modImplementation(files('libs/fabric-example-mod-1.0.0.jar'))
     include "net.devtech:arrp:0.6.2"
     include project(':forgero-core')
     include project(':minecraft-common')
