Fixed betternether ore compatability

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ subprojects {
             }
         }
         maven { url 'https://maven.kosmx.dev/' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
