--- a/forgero-fabric-compat/gradle.properties
+++ b/forgero-fabric-compat/gradle.properties
@@ -37,3 +37,4 @@ mmdecorations_version=0.5.0
 aea_versionite=1.19-SNAPSHOT
 emi_version=0.6.1+1.19.2
 player_anim_version=0.3.5
+bclib_version=2.1.4
