Added accesswidener to compat module as well

--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -159,6 +159,7 @@ sourceSets {
 }
 
 loom {
+    accessWidenerPath = file("src/main/resources/forgero-fabric-compat.accesswidener")
     runs {
         testmodServer {
             server()
