--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     implementation project(':forgero-core')
     implementation project(':forgero-vanilla')
     implementation project(':forgero-extended')
-    //implementation project(':forgero-structures')
+    implementation project(':forgero-structures')
     implementation project(':forgero-compat')
     implementation project(path: ':minecraft-common', configuration: 'dev')
 
