--- a/forgero-fabric/src/main/resources/data/forgero/patchouli_books/forgero_guide/en_us/entries/intro/getting_started_easy_parts.json
+++ b/forgero-fabric/src/main/resources/data/forgero/patchouli_books/forgero_guide/en_us/entries/intro/getting_started_easy_parts.json
@@ -9,7 +9,7 @@
     },
     {
       "type": "patchouli:crafting",
-      "title": "Basic wooden sheads",
+      "title": "Basic wooden heads",
       "recipe": "forgero:basic_wood_axe_head",
       "recipe2": "forgero:basic_wood_pickaxe_head"
     },
