--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -80,6 +80,10 @@ dependencies {
     //modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
     //modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
+    //ae2 testing
+    //modLocalRuntime "maven.modrinth:ae2:fabric-12.9.2"
+    //modLocalRuntime('teamreborn:energy:2.3.0')
+
     //IPN testing
     //modCompileOnly "curse.maven:inventory-profiles-next-495267:4263990"
     //modCompileOnly "curse.maven:libipn-679177:4263961"
