--- a/.github/workflows/run_gametest.yml
+++ b/.github/workflows/run_gametest.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Runs gametest
-        run: gradle forgero-fabric:runGameTest --stacktrace
+        run: gradle forgero-fabric:runGameTest --stacktrace --info --debug --scan
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
