--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -139,6 +139,10 @@ sourceSets {
 }
 
 loom {
+    mixin {
+        useLegacyMixinAp = true
+    }
+
     accessWidenerPath = file("src/main/resources/forgero-fabric-compat.accesswidener")
     runs {
         testmodServer {
