--- a/minecraft-common/build.gradle
+++ b/minecraft-common/build.gradle
@@ -17,6 +17,11 @@ artifacts {
 dependencies {
     implementation project(':forgero-core')
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor "org.ow2.asm:asm:${project.asm_version}"
+    annotationProcessor "org.ow2.asm:asm-analysis:${project.asm_version}"
+    annotationProcessor "org.ow2.asm:asm-commons:${project.asm_version}"
+    annotationProcessor "org.ow2.asm:asm-tree:${project.asm_version}"
+    annotationProcessor "org.ow2.asm:asm-util:${project.asm_version}"
 
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'org.projectlombok:lombok:1.18.24'
