--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,14 @@ subprojects {
 
 configure(subprojects) {
     apply plugin: 'java-library'
+
+    dependencies {
+        implementation "org.ow2.asm:asm:${project.asm_version}"
+        implementation "org.ow2.asm:asm-analysis:${project.asm_version}"
+        implementation "org.ow2.asm:asm-commons:${project.asm_version}"
+        implementation "org.ow2.asm:asm-tree:${project.asm_version}"
+        implementation "org.ow2.asm:asm-util:${project.asm_version}"
+    }
 }
 
 task copyJars(type: Copy) {
