--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -156,6 +156,9 @@ sourceSets {
 }
 
 loom {
+    mixin {
+        useLegacyMixinAp = true
+    }
     runs {
         clientExtended {
             dependencies {
