--- a/minecraft-common/build.gradle
+++ b/minecraft-common/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modApi "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 }
 
 processResources {
@@ -43,5 +43,9 @@ jar {
 }
 
 loom {
+
+    mixin {
+        useLegacyMixinAp = true
+    }
     accessWidenerPath = file("src/main/resources/minecraft-common.accesswidener")
 }
