--- a/.github/workflows/run_gametest.yml
+++ b/.github/workflows/run_gametest.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   gametest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
