--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
+plugins {
+    id 'dev.architectury.loom' version '1.1-SNAPSHOT' apply false
+    id 'fabric-loom' version '1.1-SNAPSHOT' apply false
+}
+
 version = "${project.forgero_version}-BETA-${project.mc_target}"
 group = project.maven_group
 archives_base_name = project.archives_base_name
-
 
 subprojects {
     version = "${project.forgero_version}-BETA-${project.mc_target}"
@@ -9,62 +13,21 @@ subprojects {
     archives_base_name = project.archives_base_name
 
     repositories {
-        exclusiveContent {
-            forRepository {
-                maven {
-                    name = "Modrinth"
-                    url = "https://api.modrinth.com/maven"
-                }
-            }
-            filter {
-                includeGroup "maven.modrinth"
-            }
-        }
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
-        }
-        mavenCentral()
-        mavenLocal()
-        maven { url = "https://storage.googleapis.com/devan-maven/" }
-        maven { url = "https://maven.shedaniel.me/" }
-        maven {
-            url "https://cursemaven.com"
-            content {
-                includeGroup "curse.maven"
-            }
-        }
-
-        repositories {
-            maven { url 'https://maven.blamejared.com' }
-        }
-        maven { url = "https://modmaven.dev/" }
-        maven { url = "https://minecraft.guntram.de/maven/" }
-        maven { url = "https://www.cursemaven.com" }
-        maven { url = "https://maven.shedaniel.me/" }
-        maven { url = "https://maven.terraformersmc.com/" }
-        maven { url = "https://maven.wispforest.io/" }
-        maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
-        maven { url = "https://maven.cafeteria.dev" }
-        maven { url = "https://maven.jamieswhiteshirt.com/libs-release" }
-        maven { url = "https://api.modrinth.com/maven/" }
-        maven { url = 'https://maven.blamejared.com' }
-        maven {
-            url = uri("https://storage.googleapis.com/devan-maven/")
-        }
-        maven {
-            name 'Gegy'
-            url 'https://maven.gegy.dev'
-        }
-        maven {
-            name = "Modrinth"
-            url = "https://api.modrinth.com/maven"
-            content {
-                includeGroup "maven.modrinth"
-            }
-        }
+        maven { url "https://api.modrinth.com/maven" }
+        maven { url "https://maven.shedaniel.me/" }
+        maven { url "https://cursemaven.com" }
+        maven { url 'https://maven.blamejared.com' }
+        maven { url "https://minecraft.guntram.de/maven/" }
+        maven { url "https://maven.terraformersmc.com/" }
+        maven { url "https://maven.wispforest.io/" }
+        maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
+        maven { url "https://maven.cafeteria.dev" }
+        maven { url "https://maven.jamieswhiteshirt.com/libs-release" }
+        maven { url "https://storage.googleapis.com/devan-maven/" }
+        maven { url 'https://maven.gegy.dev' }
         maven { url 'https://maven.kosmx.dev/' }
         maven { url 'https://jitpack.io' }
+        mavenLocal()
     }
 }
 
