--- a/forgero-vanilla/src/main/resources/data/forgero/packs/forgero-scrappy-variants/part/scrappy-leather-binding.json
+++ b/forgero-vanilla/src/main/resources/data/forgero/packs/forgero-scrappy-variants/part/scrappy-leather-binding.json
@@ -10,12 +10,14 @@
       {
         "type": "RARITY",
         "order": "BASE",
+        "category": "PASS",
         "operation": "ADDITION",
         "value": 5
       },
       {
         "type": "DURABILITY",
         "order": "BASE",
+        "category": "PASS",
         "operation": "ADDITION",
         "value": 80
       }
