Fixed mod compatibility

--- a/forgero-fabric-compat/gradle.properties
+++ b/forgero-fabric-compat/gradle.properties
@@ -13,6 +13,7 @@ archives_base_name=forgero
 cca_version=5.0.2
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
 modmenu_version=4.1.2
+spruceui_version=4.1.0+1.19.3
 # https://www.curseforge.com/minecraft/mc-mods/alloy-forgery/files
 # https://maven.wispforest.io/wraith/alloy-forgery/
 alloyforgery_version=2.0.16+1.19
@@ -35,6 +36,6 @@ mmdecorations_version=0.5.0
 # Additional Entity Attributes
 # https://github.com/DaFuqs/AdditionalEntityAttributes
 aea_versionite=1.19-SNAPSHOT
-emi_version=0.6.1+1.19.2
-player_anim_version=0.3.5
+emi_version=0.6.1+1.19.3
+player_anim_version=1.0.2+1.19.3
 bclib_version=2.1.4
