--- a/forgero-fabric-compat/build.gradle
+++ b/forgero-fabric-compat/build.gradle
@@ -24,19 +24,19 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
+	modImplementation "vazkii.patchouli:Patchouli:1.19.3-78-FABRIC"
 
 	modImplementation "curse.maven:arrp-463113:4180873"
 
 	//dynamiclights compat
-	modImplementation "curse.maven:modmenu-308702:4145207"
-	modImplementation "curse.maven:lambdynamiclights-393442:3824820"
-	modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+	modImplementation "curse.maven:modmenu-308702:4401053"
+	modImplementation "curse.maven:lambdynamiclights-393442:4257388"
+	modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
 	//better combat
-	modCompileOnly "maven.modrinth:better-combat:1.5.5+1.19-fabric"
-	modCompileOnly "maven.modrinth:cloth-config:8.2.88+fabric"
-	modCompileOnly("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
+	modImplementation "maven.modrinth:better-combat:1.6.1+1.19.3-fabric"
+	modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
+	modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
 	//betterend&betternether
 	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
