--- a/forgero-fabric/build.gradle
+++ b/forgero-fabric/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'fabric-loom' apply true
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
+	id "io.freefair.lombok" version "8.0.0-rc2"
 }
 
 configurations {
@@ -24,10 +25,14 @@ dependencies {
 	implementation project(':forgero-compat')
 	implementation project(path: ':minecraft-common', configuration: 'dev')
 
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+	compileOnly 'org.projectlombok:lombok:1.18.26'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.26'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
 
 	implementation 'org.jetbrains:annotations:23.0.0'
-	implementation 'org.projectlombok:lombok:1.18.24'
+
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
