--- a/forgero-core/build.gradle
+++ b/forgero-core/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id "io.freefair.lombok" version "8.0.0-rc2"
 }
 
 repositories {
@@ -7,8 +8,12 @@ repositories {
 }
 
 dependencies {
-	compileOnly 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+	compileOnly 'org.projectlombok:lombok:1.18.26'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.26'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
+
 	api 'org.jetbrains:annotations:23.0.0'
 	api 'com.google.guava:guava:31.1-jre'
 	api 'org.apache.logging.log4j:log4j-core:2.18.0'
